# pi-os

./: Cargo.toml  README.md  kernel.ld  pi-linker.ld
.cargo/: config
src/: arch.rs  console.rs  interrupts.rs  log.rs  mailbox.rs  main.rs  mem.rs  mmio.rs  mmu.rs  uart.rs
src/arch/: aarch32.rs  aarch64.rs  arm.rs
src/arch/asm/: arm.s
src/asm/: aarch64.s  boot.s  pi4.s
src/core/: console.rs  cpu.rs  log.rs  mod.rs  sync.rs  time.rs
src/core/cpu/: mod.rs
src/core/cpu/arch/: aarch64.rs  mod.rs
src/drivers/: mod.rs
src/drivers/bcm2xxx/: mailbox.rs  mod.rs  uart.rs
