[package]
name = "armos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
lock_api = "0.4.9"
log = { version = "0.4.17", default-features = false }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

